[package]
name = "actionkv"
version = "0.1.0"
edition = "2018"

[dependencies]
bincode = "1.3.3"
byteorder = "1.4.3"
crc = "2.1.0"
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.69"
structopt = "0.3.25"


[lib]
name = "libactionkv"
path = "src/lib.rs"

[[bin]]
name = "akv_mem"
path = "src/akv_mem.rs"

[[bin]]
name = "akv_disk"
path = "src/akv_disk.rs"
