[package]
name = "async-chat"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = { version = "1.10.0", features = ["unstable"] }
crossbeam = "0.8.1"
futures-lite = "1.12.0"
serde = { version = "1.0.130", features = ["derive", "rc"] }
serde_json = "1.0.72"
tokio = { version = "1.14.0", features = ["sync"] }
waker-fn = "1.1.0"
