[package]
name = "mget"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
env_logger = "0.9.0"
rand = "0.8.4"
smoltcp = { version = "0.7.5", default-features = false, features = ["log", "proto-igmp", "phy-raw_socket",
    "socket-tcp", "socket-raw", "ethernet", "proto-ipv4"] }
structopt = "0.3.25"
trust-dns-client = { version = "0.20.3", default-features = false }
url = "2.0.0"
