[package]
name = "nacos-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.51"
tokio = {version = "1.14.0", features = ["full"]}
protobuf = "2.25.2"
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0.72"
local-ip-address = "0.4.4"
bytes = "1.1.0"
log = "0.4.14"
env_logger = "0.9.0"

[build-dependencies]
protobuf-codegen-pure = "2.25.2"