[package]
name = "nacos-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "bin/nacos_client.rs"
name = "nacos_client"

[dependencies]
async-trait = "0.1.51"
tokio = {version = "1.14.0", features = ["full"]}
serde = {version = "1.0.130", features = ["derive", "std"]}
serde_json = "1.0.72"
local-ip-address = "0.4.4"
bytes = "1.1.0"
log = "0.4.14"
env_logger = "0.9.0"
tonic = {version = "0.6.1", features = ["default", "tls"]}
prost = {version = "0.9.0", features = ["prost-derive"]}
prost-types = "0.9.0"
futures-util = "0.3.19"
futures-core = "0.3.19"

[build-dependencies]
prost-build = "0.9.0"
tonic-build = {version = "0.6.0", features = ["prost", "compression"]}