[package]
name = "rust_lang"
version = "0.1.0"
edition = "2018"

[dependencies]
ansi_term = "0.12.1"
bincode = "1.3.3"
chrono = "0.4.19"
core-foundation = {version = "0.9.2", features = ["mac_os_10_8_features"]}
core-foundation-sys = "0.8.3"
crossbeam = "0.8.1"
num = "0.4.0"
piston2d-graphics = {version = "0.41.0"}
piston_window = "0.120.0"
rand = "0.8.4"
rayon = "1.5.1"
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.69"
structopt = "0.3.25"
svg = "0.10.0"
