[package]
name = "rust_lang"
version = "0.1.0"
edition = "2018"

proc_macro = true

[dependencies]
ansi_term = "0.12.1"
argonautica = "0.2.0"
async-std = {version = "1.10.0", features = ["unstable"]}
bincode = "1.3.3"
chrono = "0.4.19"
core-foundation = {version = "0.9.2", features = ["mac_os_10_8_features"]}
core-foundation-sys = "0.8.3"
crossbeam = "0.8.1"
image = "0.13.0"
num = "0.4.0"
piston2d-graphics = {version = "0.41.0"}
piston_window = "0.120.0"
quote = "1.0.10"
rand = "0.8.4"
rayon = "1.5.1"
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.69"
structopt = "0.3.25"
surf = "2.3.2"
svg = "0.10.0"
syn = "1.0.82"
unicode-normalization = "0.1.19"

#[dependencies.hello_macro_derive]
#path = "../hello_macro_derive"
[dependencies.hello_macro]
path = "../hello_macro"